syntax = "proto3";

package account;

option go_package = "/proto";

message UserInfo {
	string firstName = 1;
	string lastName = 2;
}

message RegisterRequest {
	string email = 1;
	string password = 2;
	UserInfo userInfo = 3;
}

message RegisterResponse {
	string userID = 1;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string userID = 1;
}

service AccountService {
	rpc Register (RegisterRequest) returns (RegisterResponse);
	rpc Login (LoginRequest) returns (LoginResponse);
}
